contrast fix

--- a/option/option.css
+++ b/option/option.css
@@ -414,7 +414,7 @@ body.open {
 #newtab-notice, #css-unsaved {
 	padding: 4px;
 	background: var(--background-5);
-	color: #fff;
+	color: var(--color-1);
 	font-weight: 600;
 	border-radius: 2px;
 	box-shadow: var(--box-shadow-2);
